<resources>
    <string name="app_name">MyApplication</string>
    <string name="hello_world1">Hello World!!</string>
    <string name="todo">TODO</string>
    <string name="todo1" translatable="false">TODO</string>
    <string name="button1">button1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail_adrress">E-mail Adrress:</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="date_of_birth_date_month_year">Date of birth: (date/month/year)</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="username">UserName:</string>
    <string name="comfirm_password">Comfirm Password:</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="e_mail_address">e_mail_address</string>
    <string name="confirm_password">confirm_password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="email_address">Email Address:</string>
    <string name="login">Login</string>
    <string name="title_activity_tp">TpActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add_member">Add Member</string>
    <string name="calender">Calender</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily_default">Daily(Default)</string>
    <string name="calender_menu">Calender Menu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>