<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UpdateProfileActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updatefull_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_full_name"
            android:inputType="text"
            android:textColorHint="#393735"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/nametext"
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/colorAccent" >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateemail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="#FF6C02"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobiletext"
        android:layout_below="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/colorAccent" >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updatemobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:textColorHint="#FF6C02"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/mobiletext"
        android:id="@id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/colorAccent" >


    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:layout_below="@+id/text"
        android:id="@+id/radiotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/updatemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/male"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />
        <RadioButton
            android:id="@+id/updatefemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/female"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />
        <RadioButton
            android:id="@+id/updateother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/radiotext"
        android:id="@+id/usernametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="4dp"
        android:textColorHint="@color/colorAccent" >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#FF6C02"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/usernametext"
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updatepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FF6C02"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/passwordtext"
        android:id="@+id/confirmtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="2dp"
        android:textColorHint="@color/colorAccent" >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateconfirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_below="@+id/confirmtext"
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="200dp"
        android:text="update"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <Button
        android:layout_below="@+id/update_button"
        android:id="@+id/delete_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="200dp"
        android:text="delete profile"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:onClick="deleteProfile"/>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>