<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/background"
    tools:context=".AddMember">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/profile_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:onClick="back"
            android:src="@drawable/back_arrow"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Add Member"
            android:textColor="@color/background"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:text="Name:"
            />

        <EditText
            android:id="@+id/MemberName"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:hint="Enter The Name."
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:text="Email:"
            />

        <EditText
            android:id="@+id/MemberEmail"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:hint="Enter Email Address."
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="15dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:text="Mobile Number:"
            />

        <EditText
            android:id="@+id/MemberPhone"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:hint="Enter Mobile Number"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="15dp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/Membermale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/male"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />
        <RadioButton
            android:id="@+id/Memberfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/female"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />
        <RadioButton
            android:id="@+id/Memberother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:text="Relation:"
            />

        <EditText
            android:id="@+id/Relation"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:hint="Enter The Name."
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:text="Access (for Admin):"
            />

        <Switch
            android:id="@+id/AdminAccess"
            android:layout_width="168dp"
            android:layout_height="match_parent"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:textColor="#EF0000"
            android:text="Note:For Members Login Use Main User's Creditials Only"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="MissingConstraints" /></LinearLayout>




</LinearLayout>